<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:stretchColumns="0,1,2,3"
	android:shrinkColumns="0,1,2,3"
	style="@style/dbex_list_item"
>
	<TableRow
		android:layout_width="match_parent"
	>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/BPItem_Systolic"
			style="@style/dbex_label"
		/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/systolic"
			style="@style/dbex_text"
		/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/BPItem_Diastolic"
			style="@style/dbex_label"
		/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/diastolic"
			style="@style/dbex_text"
		/>
	</TableRow>
	<TableRow
		android:layout_width="match_parent"
	>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/BPItem_Date"
			style="@style/dbex_label"
		/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/date"
			style="@style/dbex_text"
		/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/BPItem_Time"
			style="@style/dbex_label"
		/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/time"
			style="@style/dbex_text"
		/>
	</TableRow>
</TableLayout>
