<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:layout_alignParentTop="true"
>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
	>
		<TextView
			android:text="@string/ClientNoteEditor_Client"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
		/>
		<Spinner
			android:id="@+id/client_spinner"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
		/>
		<TextView
			android:text="@string/ClientNoteEditor_Type"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
		/>
		<Spinner
			android:id="@+id/note_type_spinner"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
		/>
		<TextView
			android:text="@string/ClientNoteEditor_Note"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
		/>
		<EditText
			android:id="@+id/note_edit_text"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:lines="4"
			android:inputType="textCapCharacters|textMultiLine"
		/>
	</LinearLayout>
</ScrollView>
